apps/desaccess/common/config/database.yaml
#@ load("@ytt:data", "data")
#@yaml/text-templated-strings
---
kind: Service
apiVersion: v1
metadata:
  name: (@= data.values.app_name @)-mysql
  namespace: #@ data.values.namespace
spec:
  type: ClusterIP
  ports:
  - port: 3306
  selector:
    app: (@= data.values.app_name @)-mysql

#@ load("@ytt:data", "data")
#@yaml/text-templated-strings
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: (@= data.values.app_name @)-mysql
  namespace: #@ data.values.namespace
spec:
  selector:
    matchLabels:
      app: (@= data.values.app_name @)-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: (@= data.values.app_name @)-mysql
    spec:
      securityContext:
        runAsUser: 999
        fsGroup: 999
      containers:
      - image: "mariadb@sha256:b3116f425f51353e2ba71b04647977b035c2c578d276e2d4285bd2798e8199ae"
        name: (@= data.values.app_name @)-mysql
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: (@= data.values.app_name @)-mysql

#@ load("@ytt:data", "data")
#@yaml/text-templated-strings
